  * Rebase patches.
  * Bump Standards-Version to 3.9.8.
  * Switch from libjson-c-dev to libfastjson-dev.
  * Bump Build-Depends on librelp-dev to (>= 1.2.12) as per configure.ac.
  * Bump Build-Depends on liblognorm-dev to (>= 2.0.0) to ensure we have a
    version which was built against libfastjson.
  * Add Build-Depends on procps. The test suite requires the ps utility.

 -- Michael Biebl <biebl@debian.org>  Tue, 12 Jul 2016 01:26:52 +0200

rsyslog (8.16.0-1) unstable; urgency=medium

  * New upstream release.
  * Rebase patches.
  * Enable more hardening flags via DEB_BUILD_MAINT_OPTIONS = hardening=+all.

 -- Michael Biebl <biebl@debian.org>  Wed, 27 Jan 2016 19:59:20 +0100

rsyslog (8.15.0-1) unstable; urgency=medium

  * New upstream release.
  * Drop debian/patches/Skip-broken-mmnormalize-tests.patch, fixed upstream.
  * Add tests which are missing in the dist tarball and which are required to
    run the test suite.

 -- Michael Biebl <biebl@debian.org>  Sun, 20 Dec 2015 17:36:00 +0100

rsyslog (8.14.0-2) unstable; urgency=medium

  * Remove logging to /dev/xconsole from the default rsyslog configuration.
    It is a rarely used feature and causes rsyslog to repeatedly retry if
    there is noone reading from /dev/xconsole. Instead ship the configuration
    as example files and add instructions to README.Debian how one can
    re-enable support for xconsole. (Closes: #745492, #783687)
  * Remove section about sysklogd from README.Debian, sysklogd is not really
    relevant anymore nowadays.
  * Ship an example file for logging to the console on tty8 which can be
    dropped into /etc/rsyslog.d instead of having it as comment in
    /etc/rsyslog.conf.

 -- Michael Biebl <biebl@debian.org>  Thu, 12 Nov 2015 22:11:11 +0100

rsyslog (8.14.0-1) unstable; urgency=medium

  * New upstream release.
  * Rebase patches.

 -- Michael Biebl <biebl@debian.org>  Sat, 07 Nov 2015 20:23:05 +0100

rsyslog (8.13.0-1) unstable; urgency=medium

  * New upstream release.