@@ -6,6 +6,7 @@ Build-Depends: debhelper (>= 9.20141010),
                dpkg-dev (>= 1.17.14),
                dh-autoreconf,
                dh-systemd (>= 1.4),
+               dh-exec,
                zlib1g-dev,
                libmysqlclient-dev,
                libpq-dev,
